# perspective-lab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLIENT_HANDOVER.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  Start App.bat  Start App.command  Start App.desktop  Start App.ps1  Start App.sh  USER_GUIDE.md  docker-compose.yml  start-production.sh  start.sh
.github/workflows/: auto-merge-sprint.yml  ci.yml  desktop.yml
backend/: .env.example  config.py  database.py  logging_config.py  main.py  requirements.txt  setup_keys.py
backend/agents/: output_format.py  prompts.py  service.py
backend/application/: __init__.py  sequential_hitl.py
backend/core/: __init__.py  constants.py
backend/engine/: __init__.py  comparison_matrix.py  llm_theory_judge.py  output_formats.py  parallel_workflow.py  profiles.py  response_parser.py  self_check.py  sequential_context.py  sequential_workflow.py  theory_judge.py
backend/infrastructure/: __init__.py
backend/tests/: conftest.py  test_agents_api.py  test_ask_api.py  test_case_content.py  test_comparison_api.py  test_digital_inclusion_case.py  test_export_rubric.py  test_health.py  test_llm_theory_judge.py  test_mock_acceptance_flow.py  test_parallel_workflow.py  test_presentation_api.py  (+8 more)
desktop/: ensure-backend-dev.mjs  start-backend.bat  start-backend.sh
docker/: entrypoint.sh  gunicorn.conf.py
docs/: SPRINT_PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
(+143 files in other folders)
